--- a/styles/styles.css
+++ b/styles/styles.css
@@ -207,7 +207,7 @@ option {
   margin: 10px 0;
 }
 
-.recipe-card img {
+.recipe-card > img {
   width: 50%;
   align-self: center;
 }
@@ -219,52 +219,6 @@ option {
   font-family: 'Rubik', sans-serif;
   font-weight: bold;
 }
-.card-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-.card-infos {
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
-  margin-top: 0;
-}
-.order-options {
-  padding: 10px 15px;
-  width: 80px;
-  display: flex;
-  flex-wrap: wrap;
-  border-top: 10px solid white;
-  align-items: center;
-  justify-content: center;
-  background-color: #f7fc00;
-  align-self: self-end;
-}
-.order-options > * {
-  width: 50%;
-}
-.order-options img {
-  width: 33px;
-}
-.order-options p {
-  width: 33px;
-  font-size: 30px;
-}
-.order-options button {
-  width: fit-content;
-  height: fit-content;
-  padding: 0;
-  border-radius: 50%;
-  border: none;
-  background-color: inherit;
-}
-.order-options button img {
-  width: 30px;
-  padding: 0;
-  margin: 0;
-}
-
 .recipe-card p {
   margin: 0;
   margin-bottom: 10px;
@@ -286,6 +240,35 @@ option {
   transform: translateX(5px);
   font-weight: 600;
   filter: contrast(200%);
+}
+.card-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.card-infos {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-top: 0;
+}
+.order-options {
+  padding: 15px 15px;
+  width: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  border-top: 8px solid #ffffff80;
+  align-items: center;
+  justify-content: center;
+  background-color: #5eacf593;
+  box-shadow: 4px 4px 4px #00000040;
+  align-self: self-end;
+}
+.order-options * {
+  width: 30px;
+}
+.order-options p {
+  font-size: 20px;
 }
 
 /* Recipe details */
