--- a/styles/styles.css
+++ b/styles/styles.css
@@ -201,37 +201,37 @@ option {
   height: 350px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   text-align: center;
   background-color: #fdff8a;
   box-shadow: 4px 8px 4px #00000040;
   margin: 10px 0;
 }
 
-.recipe-card img {
+.recipe-card > img {
   width: 50%;
   align-self: center;
 }
 
 .recipe-card h2 {
   margin: 0;
-  padding-bottom: 10px;
+  padding: 10px 0px;
+  height: 100px;
   font-family: 'Rubik', sans-serif;
   font-weight: bold;
 }
-
 .recipe-card p {
   margin: 0;
+  margin-bottom: 10px;
 }
 .recipe-card a {
   font-family: 'Fira Code', monospace;
   padding: 5px;
+  margin-bottom: 15px;
   text-decoration: none;
   color: #000;
   font-size: 0.8rem;
   background-color: #5eacf593;
   width: fit-content;
-  margin: auto;
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
   transition: transform 200ms ease-in, filter 100ms ease-in-out,
     font-weight 300ms ease-in-out;
@@ -240,6 +240,35 @@ option {
   transform: translateX(5px);
   font-weight: 600;
   filter: contrast(200%);
+}
+.card-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.card-infos {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-top: 0;
+}
+.order-options {
+  padding: 15px 15px;
+  width: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  border-top: 8px solid #ffffff80;
+  align-items: center;
+  justify-content: center;
+  background-color: #5eacf593;
+  box-shadow: 4px 4px 4px #00000040;
+  align-self: self-end;
+}
+.order-options * {
+  width: 30px;
+}
+.order-options p {
+  font-size: 20px;
 }
 
 /* Recipe details */
