--- a/styles/styles.css
+++ b/styles/styles.css
@@ -475,21 +475,13 @@ label p {
 }
 /* Order cards */
 .order-card {
-  padding: 10px;
-  width: 400px;
-  height: 200px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  padding: 30px;
+  width: 380px;
+  height: 290px;
   text-align: center;
   background-color: #fdff8a;
   box-shadow: 4px 8px 4px #00000040;
   margin: 10px 0;
-}
-.order-card img {
-  height: 100px;
-  width: 100px;
 }
 .order-card p {
   margin: 0;
@@ -501,8 +493,23 @@ label p {
   color: #000;
   font-size: 1rem;
   background-color: #5eacf593;
-  margin: auto;
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
+}
+.order-card__recipe{
+  display: flex;
+  align-items: start;
+}
+.order-card__recipe-title-price{
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 10px;
+}
+.order-card__recipe img {
+  width: 100px;
+  height: 100px;
+  order:-1;
 }
 
 /* ----------------- Footer ----------------- */
