--- a/styles/styles.css
+++ b/styles/styles.css
@@ -477,42 +477,44 @@ label p {
 .order-card {
   padding: 30px;
   width: 380px;
-  height: 290px;
+  height: 260px;
   text-align: center;
   background-color: #fdff8a;
   box-shadow: 4px 8px 4px #00000040;
   margin: 10px 0;
 }
-.order-card img {
-  width: 50px;
+.recipe-infos {
+  height: 150px;
+  position: relative;
 }
-.order-card p {
-  margin: 0;
+.recipe-infos img {
+  width: 150px;
+  float: inline-start;
+  margin-right: 10px;
+}
+.recipe-infos p {
   text-align: left;
+  position: absolute;
+  bottom: 0px;
+  left: 160px;
+  margin: 0;
 }
-.order-card a {
-  padding: 5px;
-  text-decoration: none;
-  color: #000;
-  font-size: 1rem;
+.recipe-infos h2 {
+  padding: 0px;
+  text-align: left;
+  font-size: 22px;
+}
+.mini-postit {
+  width: 80%;
+  padding: 15px 15px;
+  display: flex;
+  border-top: 8px solid #ffffff80;
   background-color: #5eacf593;
-  border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
+  box-shadow: 4px 4px 4px #00000040;
+  justify-self: center;
 }
-.order-card__recipe {
-  display: flex;
-  align-items: start;
-}
-.order-card__recipe-title-price {
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-left: 10px;
-}
-.order-card__recipe img {
-  width: 100px;
-  height: 100px;
-  order: -1;
+.mini-postit img {
+  width: 30px;
 }
 
 /* ----------------- Footer ----------------- */
