--- a/styles/styles.css
+++ b/styles/styles.css
@@ -455,12 +455,12 @@ label p {
   background-image: url('../images/texture.jpg');
   background-size: cover;
   font-family: 'Fira Code', monospace;
-  padding: 100px 0;
+  padding: 60px 0;
 }
 
 .order h1 {
   margin: 0 auto;
-  padding-bottom: 60px;
+  padding-bottom: 20px;
   text-align: center;
   font-size: 2.5rem;
   font-weight: bold;
@@ -472,44 +472,85 @@ label p {
   justify-content: center;
   flex-wrap: wrap;
   gap: 40px;
+  @media screen and (max-width: 400px) {
+    gap: 10px;
+  }
 }
 /* Order cards */
+
 .order-card {
   padding: 30px;
   width: 380px;
-  height: 290px;
+  height: 260px;
   text-align: center;
   background-color: #fdff8a;
   box-shadow: 4px 8px 4px #00000040;
   margin: 10px 0;
-}
-.order-card p {
-  margin: 0;
-  text-align: left;
-}
-.order-card a {
-  padding: 5px;
-  text-decoration: none;
-  color: #000;
-  font-size: 1rem;
-  background-color: #5eacf593;
-  border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
-}
-.order-card__recipe{
-  display: flex;
-  align-items: start;
-}
-.order-card__recipe-title-price{
-  height: 100px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin-left: 10px;
 }
-.order-card__recipe img {
-  width: 100px;
-  height: 100px;
-  order:-1;
+@media screen and (max-width: 400px) {
+  .order-card {
+    padding: 30px 15px;
+  }
+}
+.recipe-infos {
+  height: 150px;
+  position: relative;
+}
+.recipe-infos img {
+  width: 150px;
+  float: inline-start;
+  margin-right: 10px;
+}
+.recipe-infos p {
+  text-align: left;
+  position: absolute;
+  bottom: 0px;
+  left: 160px;
+  margin: 0;
+}
+.recipe-infos h2 {
+  padding: 0px;
+  text-align: left;
+  font-size: 22px;
+}
+@media screen and (max-width: 400px) {
+  .recipe-infos h2 {
+    font-size: 16px;
+  }
+  .recipe-infos p {
+    font-size: 14px;
+  }
+}
+.mini-postit {
+  width: 80%;
+  padding: 15px 15px;
+  margin: 15px 0px;
+  display: flex;
+  border-top: 8px solid #ffffff80;
+  background-color: #5eacf593;
+  box-shadow: 4px 4px 4px #00000040;
+  align-self: center;
+}
+.mini-postit p {
+  margin-bottom: 4px;
+  padding-left: 10px;
+  align-self: flex-end;
+}
+.basket-wrapper {
+  width: 74px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.basket-wrapper > * {
+  width: 30px;
+  margin: 2px;
+}
+.basket-wrapper p {
+  padding: 0;
+  align-self: center;
 }
 
 /* ----------------- Footer ----------------- */
