--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,10 @@ header img {
   transition: all 300ms ease-in-out;
 }
 header img:hover {
-  transform: scale(0.8);
+  transform: scale(0.9);
+}
+header img:active{
+  transform: scale(1.1);
 }
 header nav {
   flex: 1;
@@ -86,6 +89,10 @@ nav ul li a {
 
 .header-active {
   background: #f7fc00;
+}
+
+nav li:active{
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 900px) {
@@ -173,10 +180,14 @@ select {
   margin: 0 20px;
   font-weight: 600;
   background-color: #b1b1b1;
+  cursor: pointer;
 }
 select:hover {
   outline: #000 solid 3px;
   font-weight: 800;
+}
+select:active{
+  transform: scale(1.05);
 }
 option {
   font-size: 1.1em;
@@ -238,6 +249,11 @@ option {
 }
 .recipe-card a:hover {
   transform: translateX(5px);
+  font-weight: 600;
+  filter: contrast(200%);
+}
+.recipe-card a:active{
+  transform: scale(1.3);
   font-weight: 600;
   filter: contrast(200%);
 }
@@ -317,6 +333,11 @@ option {
   font-weight: 600;
   filter: contrast(200%);
 }
+.recipe-wrapper a:active{
+  transform: scale(1.3);
+  font-weight: 600;
+  filter: contrast(200%);
+}
 
 @media screen and (max-width: 900px) {
   .recipe-wrapper div {
@@ -382,10 +403,13 @@ h2 {
   color: #000;
   background: linear-gradient(transparent 50%, #5eacf5 50%);
   background-size: auto 175%;
-  transition: all 300ms ease-in;
+  transition: background-position-y 300ms ease-in;
 }
 .contact-infos a:hover {
   background-position-y: 100%;
+}
+.contact-infos a:active{
+  font-weight: 800;
 }
 
 /* Contact Form */
@@ -454,6 +478,10 @@ label p {
   background-size: 2000%;
   transform: translate(-5px, -5px);
   box-shadow: 9px 13px 9px #00000040;
+}
+.contact button:focus{
+  transform: translate(5px, 5px);
+  box-shadow: 4px 8px 4px #00000040;
 }
 .button-holder {
   flex: 100%;
@@ -553,6 +581,10 @@ label p {
   transform: translate(-5px, -5px);
   box-shadow: 9px 13px 9px #00000040;
 }
+.orders-total button:active{
+  transform: translate(5px, 5px);
+  box-shadow: 4px 8px 4px #00000040;
+}
 
 /* ----------------- Footer ----------------- */
 
@@ -591,11 +623,14 @@ footer a {
   margin: 2px 0;
   background: linear-gradient(transparent 50%, #5eacf5 50%);
   background-size: auto 175%;
-  transition: all 300ms ease-in;
+  transition: background-position-y 300ms ease-in;
   width: fit-content;
 }
 .footer-contact__mail-tel a:hover {
   background-position-y: 100%;
+}
+.footer-contact__mail-tel a:active{
+  font-weight: 800;
 }
 .footer-links {
   display: flex;
@@ -610,5 +645,8 @@ footer img {
   transition: all 200ms ease-in;
 }
 footer img:hover {
-  transform: scale(0.8);
+  transform: scale(0.9);
+}
+footer img:active{
+  transform: scale(1.3);
 }
