--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,18 +113,100 @@ nav ul li a {
   background-size: cover;
   padding: 40px 0;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-}
-.home p {
   font-family: 'Fira Code', monospace;
-  font-size: 64px;
-  width: 70%;
 }
-@media screen and (max-width: 900px) {
-  .home p {
+.home h1 {
+  font-size: max(64px, 5vw);
+  width: 70%;
+  margin-bottom: 0;
+  @media screen and (max-width: 900px) {
     font-size: 48px;
     width: 90%;
+  }
+  @media screen and (max-width: 600px) {
+    font-size: 34px;
+  }
+}
+
+.home a {
+  padding: 5px;
+  margin-bottom: 15px;
+  text-decoration: none;
+  color: #000;
+  background-color: #fdff8a;
+  width: fit-content;
+  border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
+  transition: transform 200ms ease-in, filter 100ms ease-in-out,
+    font-weight 300ms ease-in-out;
+}
+.home img {
+  width: 50%;
+  @media screen and (max-width: 600px) {
+    width: 90%;
+  }
+}
+.content-wrapper {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+  }
+}
+.recipe-of-the-week {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  align-items: center;
+  @media screen and (max-width: 600px) {
+    margin-top: 60px;
+  }
+}
+.home h2 {
+  padding: 20px;
+  background-color: #5eacf5;
+  box-shadow: 4px 8px 4px #00000040;
+  margin: 20px 0;
+  width: fit-content;
+  transform: rotate(5deg);
+  font-size: max(1.6rem, 1.6vw);
+}
+.home h3 {
+  font-family: 'Rubik';
+  font-size: 25px;
+  width: fit-content;
+  font-size: max(1.6rem, 1.6vw);
+}
+.new-recipe {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  align-items: center;
+}
+.new-recipe h2 {
+  background-color: #cd82fc;
+  transform: rotate(-4deg);
+}
+#mayonnaise {
+  margin-top: 100px;
+  margin-bottom: 60px;
+}
+.home p,
+.home a {
+  font-size: max(1rem, 1.2vw);
+}
+.home > p,
+.home > p a {
+  font-size: 30px;
+  width: 70%;
+  font-style: italic;
+  @media screen and (max-width: 600px) {
+    font-size: 20px;
+    margin-top: 0;
   }
 }
 
