--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,10 @@ header img {
   transition: all 300ms ease-in-out;
 }
 header img:hover {
-  transform: scale(0.8);
+  transform: scale(0.9);
+}
+header img:active{
+  transform: scale(1.1);
 }
 header nav {
   flex: 1;
@@ -86,6 +89,10 @@ nav ul li a {
 
 .header-active {
   background: #f7fc00;
+}
+
+nav li:active{
+  transform: scale(0.9);
 }
 
 @media screen and (max-width: 900px) {
@@ -255,10 +262,14 @@ select {
   margin: 0 20px;
   font-weight: 600;
   background-color: #b1b1b1;
+  cursor: pointer;
 }
 select:hover {
   outline: #000 solid 3px;
   font-weight: 800;
+}
+select:active{
+  transform: scale(0.95);
 }
 option {
   font-size: 1.1em;
@@ -320,6 +331,11 @@ option {
 }
 .recipe-card a:hover {
   transform: translateX(5px);
+  font-weight: 600;
+  filter: contrast(200%);
+}
+.recipe-card a:active{
+  transform: scale(1.3);
   font-weight: 600;
   filter: contrast(200%);
 }
@@ -399,6 +415,12 @@ option {
   font-weight: 600;
   filter: contrast(200%);
 }
+.recipe-wrapper a:active{
+  transform: scale(1.3);
+  font-weight: 600;
+  filter: contrast(200%);
+}
+
 @media screen and (max-width: 900px) {
   .recipe-wrapper div {
     width: 300px;
@@ -416,6 +438,14 @@ option {
     margin-top: 10px;
     align-self: start;
   }
+}
+
+.basket-wrapper img:nth-last-child(-n+2){
+  cursor: pointer;
+}
+
+.basket-wrapper img:nth-last-child(-n+2):active{
+  transform: scale(1.1);
 }
 
 /* ----------------- Contact Page ----------------- */
@@ -455,10 +485,13 @@ h2 {
   color: #000;
   background: linear-gradient(transparent 50%, #5eacf5 50%);
   background-size: auto 175%;
-  transition: all 300ms ease-in;
+  transition: background-position-y 300ms ease-in;
 }
 .contact-infos a:hover {
   background-position-y: 100%;
+}
+.contact-infos a:active{
+  font-weight: 800;
 }
 
 /* Contact Form */
@@ -507,6 +540,8 @@ label p {
   border: 2px dashed #00000040;
 }
 .contact button {
+  width: 200px;
+  height: 60px;
   margin: 20px 0px;
   align-self: center;
   padding: 10px 20px;
@@ -525,6 +560,10 @@ label p {
   background-size: 2000%;
   transform: translate(-5px, -5px);
   box-shadow: 9px 13px 9px #00000040;
+}
+.contact button:focus{
+  transform: translate(5px, 5px);
+  box-shadow: 4px 8px 4px #00000040;
 }
 .button-holder {
   flex: 100%;
@@ -634,6 +673,62 @@ label p {
   padding: 0;
   align-self: center;
 }
+.order-card button{
+  cursor: pointer;
+}
+.order-card button:active{
+  transform: scale(1.1);
+}
+
+/* Valid order */
+
+.valid-order{
+  width: fit-content;
+  margin: auto;
+}
+
+.valid-order p{
+  width: fit-content;
+  margin: 10px;
+}
+.valid-order__bold{
+  font-weight: 800;
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}
+.valid-order button{
+  cursor: pointer;
+  margin:20px;
+  width: 200px;
+  height: 60px;
+  border: none;
+  font-family: 'Fira Code', monospace;
+  font-size: 1em;
+  border-radius: 5px;
+  box-shadow: 4px 8px 4px #00000040;
+  transition: background-size 500ms ease-in-out, transform 300ms ease-in,
+    box-shadow 300ms ease-in;
+}
+
+.valid-order button:first-of-type{
+  background: linear-gradient(to right, #fdff8a 5%, #fff 1% 100%);
+  background-size: 100%;
+}
+
+.valid-order button:last-of-type{
+  background: linear-gradient(to right, #FF9494 5%, #fff 1% 100%);
+  background-size: 100%;
+}
+
+.valid-order button:hover{
+  background-size: 2000%;
+  transform: translate(-5px, -5px);
+  box-shadow: 9px 13px 9px #00000040;
+}
+.valid-order button:active{
+  transform: translate(5px, 5px);
+  box-shadow: 4px 8px 4px #00000040;
+}
 
 /* ----------------- Footer ----------------- */
 
@@ -672,11 +767,14 @@ footer a {
   margin: 2px 0;
   background: linear-gradient(transparent 50%, #5eacf5 50%);
   background-size: auto 175%;
-  transition: all 300ms ease-in;
+  transition: background-position-y 300ms ease-in;
   width: fit-content;
 }
 .footer-contact__mail-tel a:hover {
   background-position-y: 100%;
+}
+.footer-contact__mail-tel a:active{
+  font-weight: 800;
 }
 .footer-links {
   display: flex;
@@ -691,5 +789,8 @@ footer img {
   transition: all 200ms ease-in;
 }
 footer img:hover {
-  transform: scale(0.8);
+  transform: scale(0.9);
+}
+footer img:active{
+  transform: scale(1.3);
 }
