--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,7 @@ header img {
 header img:hover {
   transform: scale(0.9);
 }
-header img:active{
+header img:active {
   transform: scale(1.1);
 }
 header nav {
@@ -91,7 +91,7 @@ nav ul li a {
   background: #f7fc00;
 }
 
-nav li:active{
+nav li:active {
   transform: scale(0.9);
 }
 
@@ -268,7 +268,7 @@ select:hover {
   outline: #000 solid 3px;
   font-weight: 800;
 }
-select:active{
+select:active {
   transform: scale(0.95);
 }
 option {
@@ -334,7 +334,7 @@ option {
   font-weight: 600;
   filter: contrast(200%);
 }
-.recipe-card a:active{
+.recipe-card a:active {
   transform: scale(1.3);
   font-weight: 600;
   filter: contrast(200%);
@@ -415,7 +415,7 @@ option {
   font-weight: 600;
   filter: contrast(200%);
 }
-.recipe-wrapper a:active{
+.recipe-wrapper a:active {
   transform: scale(1.3);
   font-weight: 600;
   filter: contrast(200%);
@@ -440,11 +440,11 @@ option {
   }
 }
 
-.basket-wrapper img:nth-last-child(-n+2){
+.basket-wrapper img:nth-last-child(-n + 2) {
   cursor: pointer;
 }
 
-.basket-wrapper img:nth-last-child(-n+2):active{
+.basket-wrapper img:nth-last-child(-n + 2):active {
   transform: scale(1.1);
 }
 
@@ -490,7 +490,7 @@ h2 {
 .contact-infos a:hover {
   background-position-y: 100%;
 }
-.contact-infos a:active{
+.contact-infos a:active {
   font-weight: 800;
 }
 
@@ -561,7 +561,7 @@ label p {
   transform: translate(-5px, -5px);
   box-shadow: 9px 13px 9px #00000040;
 }
-.contact button:focus{
+.contact button:focus {
   transform: translate(5px, 5px);
   box-shadow: 4px 8px 4px #00000040;
 }
@@ -673,32 +673,32 @@ label p {
   padding: 0;
   align-self: center;
 }
-.order-card button{
+.order-card button {
   cursor: pointer;
 }
-.order-card button:active{
+.order-card button:active {
   transform: scale(1.1);
 }
 
 /* Valid order */
 
-.valid-order{
+.valid-order {
   width: fit-content;
   margin: auto;
 }
 
-.valid-order p{
+.valid-order p {
   width: fit-content;
   margin: 10px;
 }
-.valid-order__bold{
+.valid-order__bold {
   font-weight: 800;
   text-decoration: underline;
   text-decoration-thickness: 2px;
 }
-.valid-order button{
+.valid-order button {
   cursor: pointer;
-  margin:20px;
+  margin: 20px;
   width: 200px;
   height: 60px;
   border: none;
@@ -710,22 +710,22 @@ label p {
     box-shadow 300ms ease-in;
 }
 
-.valid-order button:first-of-type{
+.valid-order button:first-of-type {
   background: linear-gradient(to right, #fdff8a 5%, #fff 1% 100%);
   background-size: 100%;
 }
 
-.valid-order button:last-of-type{
-  background: linear-gradient(to right, #FF9494 5%, #fff 1% 100%);
+.valid-order button:last-of-type {
+  background: linear-gradient(to right, #ff9494 5%, #fff 1% 100%);
   background-size: 100%;
 }
 
-.valid-order button:hover{
+.valid-order button:hover {
   background-size: 2000%;
   transform: translate(-5px, -5px);
   box-shadow: 9px 13px 9px #00000040;
 }
-.valid-order button:active{
+.valid-order button:active {
   transform: translate(5px, 5px);
   box-shadow: 4px 8px 4px #00000040;
 }
@@ -753,6 +753,7 @@ footer div {
 .footer-contact {
   padding: 10px;
   min-width: 200px;
+  cursor: pointer;
 }
 footer p {
   margin: 0;
@@ -773,7 +774,7 @@ footer a {
 .footer-contact__mail-tel a:hover {
   background-position-y: 100%;
 }
-.footer-contact__mail-tel a:active{
+.footer-contact__mail-tel a:active {
   font-weight: 800;
 }
 .footer-links {
@@ -791,6 +792,16 @@ footer img {
 footer img:hover {
   transform: scale(0.9);
 }
-footer img:active{
+footer img:active {
   transform: scale(1.3);
+}
+footer .copy-message {
+  display: '';
+  position: absolute;
+  width: 200px;
+  background-color: #fdff8a;
+  border-radius: 5px;
+  padding: 10px 5px;
+  font-size: 15px;
+  text-align: center;
 }
