--- a/styles/styles.css
+++ b/styles/styles.css
@@ -796,7 +796,7 @@ footer img:active {
   transform: scale(1.3);
 }
 footer .copy-message {
-  display: '';
+  display: none;
   position: absolute;
   width: 200px;
   background-color: #fdff8a;
@@ -804,4 +804,7 @@ footer .copy-message {
   padding: 10px 5px;
   font-size: 15px;
   text-align: center;
+}
+footer .footer-contact:active {
+  transform: scale(0.95);
 }
