--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,15 +74,12 @@ nav ul li a {
   background-size: auto 200%;
   transition: all 300ms ease-in-out;
 }
-
 .header-unactive:hover {
   background-position-y: 100%;
 }
-
 .header-active {
   background: #f7fc00;
 }
-
 nav li:active {
   transform: scale(0.9);
 }
@@ -107,31 +104,47 @@ nav li:active {
   flex: 1;
   background-image: url('../images/texture.jpg');
   background-size: cover;
-  padding: 40px 0;
+  padding-top: 8rem;
+  @media screen and (max-width: 900px) {
+    padding-top: 5rem;
+  }
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: 'Fira Code', monospace;
 }
 .home h1 {
-  font-size: max(64px, 5vw);
-  width: 70%;
-  margin-bottom: 0;
+  font-size: max(4rem, 5vw);
+  max-width: 18ch;
+  margin: 0;
   @media screen and (max-width: 900px) {
-    font-size: 48px;
-    width: 90%;
+    font-size: 3rem;
   }
   @media screen and (max-width: 600px) {
-    font-size: 34px;
+    font-size: 2.2rem;
+    padding: 0 0.4rem;
   }
 }
+.home-subtitle {
+  font-size: 1.8rem;
+  font-style: italic;
+  @media screen and (max-width: 900px) {
+    max-width: 40ch;
+    line-height: 1.8rem;
+  }
+  @media screen and (max-width: 600px) {
+    max-width: 34ch;
+    line-height: 1.8rem;
+    padding: 0 0.4em;
+  }
+}
+
 .home a {
-  padding: 5px;
-  margin-bottom: 15px;
+  padding: 0.2rem;
+  margin-bottom: 0.6rem;
   text-decoration: none;
   color: #000;
   background-color: #fdff8a;
-  width: fit-content;
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
   transition: background-color 400ms ease-in, font-weight 300ms ease-in-out;
 }
@@ -142,50 +155,55 @@ nav li:active {
 .home a:active {
   background: #fdff8a;
 }
-.home img {
+.content-wrapper img {
   width: 50%;
-  @media screen and (max-width: 600px) {
-    width: 90%;
+  margin-left: 1rem;
+  @media screen and (max-width: 900px) {
+    max-width: 90%;
   }
 }
 .content-wrapper {
   width: 90%;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   @media screen and (max-width: 600px) {
     flex-direction: column;
-    gap: 15px;
+    gap: 1rem;
     align-items: center;
   }
+}
+.content-wrapper p {
+  margin: 0;
+  max-width: 45ch;
 }
 .recipe-of-the-week {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  margin-top: 5rem;
   align-items: center;
   @media screen and (max-width: 600px) {
-    margin-top: 60px;
+    margin-top: 3rem;
   }
 }
 .home h2 {
-  padding: 20px;
+  padding: 1em;
   background-color: #5eacf5;
   box-shadow: 4px 8px 4px #00000040;
-  margin: 20px 0;
+  margin: 1rem 0;
   width: fit-content;
   transform: rotate(5deg);
-  font-size: max(1.6rem, 1.6vw);
+  font-size: clamp(1.2rem, 4vw, 1.6rem);
 }
 .home h3 {
   font-family: 'Rubik';
-  font-size: 25px;
   width: fit-content;
-  font-size: max(1.6rem, 1.6vw);
+  font-size: clamp(1.4rem, 4vw, 1.8rem);
 }
 .new-recipe {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  margin-top: 5rem;
   align-items: center;
 }
 .new-recipe h2 {
@@ -193,22 +211,14 @@ nav li:active {
   transform: rotate(-4deg);
 }
 #mayonnaise {
-  margin-top: 100px;
-  margin-bottom: 60px;
+  margin-top: 1rem;
+  margin-bottom: 5rem;
+  width: 90%;
+  max-width: 800px;
 }
 .home p,
 .home a {
-  font-size: max(1rem, 1.2vw);
-}
-.home > p,
-.home > p a {
-  font-size: 30px;
-  width: 70%;
-  font-style: italic;
-  @media screen and (max-width: 600px) {
-    font-size: 20px;
-    margin-top: 0;
-  }
+  font-size: clamp(1rem, 1.2vw, 1.5rem);
 }
 
 /* ----------------- Menu page ----------------- */
