--- a/styles/styles.css
+++ b/styles/styles.css
@@ -228,42 +228,44 @@ nav li:active {
   background-image: url('../images/texture.jpg');
   background-size: cover;
   font-family: 'Fira Code', monospace;
-  padding: 100px 0;
+  padding: 5rem 0;
 }
 
 .menu h1 {
   margin: 0 auto;
-  padding-bottom: 60px;
   text-align: center;
-  font-size: 2.5rem;
+  font-size: clamp(2rem, 4vw, 2.5rem);
   font-weight: bold;
 }
 .card-wrapper {
   margin: 0 auto;
-  padding: 40px 20px;
+  padding: 2.5rem 1.25rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 2.5rem;
 }
 #select-filter-form {
   text-align: center;
   width: fit-content;
-  margin: 30px auto;
+  margin: 2rem auto;
+  @media screen and (max-width: 860px) {
+    margin: 1rem auto;
+  }
 }
 label {
   display: flex;
   align-items: end;
 }
 select {
-  padding: 2px 10px;
+  padding: 2px 0.625rem;
   font-family: 'Fira Code', monospace;
   font-size: 1.1em;
   border: none;
   box-shadow: 10px 5px 5px #00000040;
   border-radius: 0%;
   background-color: #fff;
-  margin: 0 20px;
+  margin: 0 1.25rem;
   font-weight: 600;
   background-color: #b1b1b1;
   cursor: pointer;
@@ -278,7 +280,7 @@ select:active {
 option {
   font-size: 1.1em;
   font-weight: 400;
-  padding: 10px;
+  padding: 0.625rem;
 }
 
 .yellow-option {
@@ -293,7 +295,7 @@ option {
 
 /* Recipes cards */
 .recipe-card {
-  padding: 20px;
+  padding: 1.25rem;
   width: 350px;
   height: 350px;
   display: flex;
@@ -301,7 +303,7 @@ option {
   text-align: center;
   background-color: #fdff8a;
   box-shadow: 4px 8px 4px #00000040;
-  margin: 10px 0;
+  margin: 0.625rem 0;
 }
 
 .recipe-card > img {
@@ -311,22 +313,22 @@ option {
 
 .recipe-card h2 {
   margin: 0;
-  padding: 10px 0px;
+  padding: 0.625rem 0;
   height: 100px;
   font-family: 'Rubik', sans-serif;
   font-weight: bold;
 }
 .recipe-card p {
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 .recipe-card a {
   font-family: 'Fira Code', monospace;
   padding: 5px;
-  margin-bottom: 15px;
+  margin-bottom: 0.625rem;
   text-decoration: none;
   color: #000;
-  font-size: 0.8rem;
+  font-size: 1rem;
   background-color: #5eacf593;
   width: fit-content;
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
@@ -370,27 +372,27 @@ option {
   width: 30px;
 }
 .order-options p {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 /* Recipe details */
 .recipe-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .recipe-wrapper div {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 2fr 2fr 1fr 1fr;
-  margin: 0 150px;
-  column-gap: 20px;
+  column-gap: 1.25rem;
 }
 .recipe-wrapper h1 {
   grid-column-start: 2;
   padding: 0;
   margin: 0;
   text-align: left;
-  font-size: 2rem;
+  font-size: clamp(2rem, 4vw, 2.2rem);
 }
 .recipe-wrapper img {
   width: 50%;
@@ -401,9 +403,12 @@ option {
 .recipe-wrapper p {
   padding: 0;
   margin: 0;
+  max-width: 45ch;
+  font-size: clamp(1rem, 3vw, 1.4rem);
 }
 .recipe-wrapper a {
   font-family: 'Fira Code', monospace;
+  font-size: clamp(1rem, 3vw, 1.4rem);
   text-decoration: none;
   color: #000;
   background-color: #fdff8a;
@@ -430,16 +435,16 @@ option {
     width: 300px;
     display: flex;
     flex-direction: column;
-    margin: 20px auto;
+    margin: 1.25rem auto;
   }
   .recipe-wrapper h1 {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
   .recipe-wrapper p {
-    margin: 10px 0;
+    margin: 0.625rem 0;
   }
   .recipe-wrapper a {
-    margin-top: 10px;
+    margin-top: 0.625rem;
     align-self: start;
   }
 }
