--- a/styles/styles.css
+++ b/styles/styles.css
@@ -466,13 +466,13 @@ option {
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 0px 10px;
+  padding: 0 0.625rem;
   font-family: 'Fira Code', monospace;
 }
 .contact h1,
 h2 {
   margin: 0 auto;
-  padding: 40px 0px;
+  padding: 2.5rem 0;
   text-align: center;
 }
 .contact img {
@@ -480,7 +480,7 @@ h2 {
   max-width: 700px;
 }
 .contact-infos {
-  padding: 20px 0px;
+  padding: 1.25rem 0;
 }
 .contact p {
   font-size: 1rem;
@@ -489,7 +489,7 @@ h2 {
 }
 .contact-infos a {
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
   text-decoration: none;
   color: #000;
   background: linear-gradient(transparent 50%, #5eacf5 50%);
@@ -511,17 +511,17 @@ h2 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding-bottom: 40px;
+  padding-bottom: 2.5rem;
 }
 label {
   display: flex;
 }
 label p {
-  padding-left: 10px;
+  padding-left: 0.625rem;
 }
 .form-card {
-  padding: 30px 20px;
-  margin: 20px 50px;
+  padding: 1.875rem 1.25rem;
+  margin: 1.25rem 3.125rem;
   background-color: #fdff8a;
   border: none;
   box-shadow: 4px 8px 4px #00000040;
@@ -536,7 +536,7 @@ label p {
   width: 250px;
 }
 .contact-form input {
-  margin-top: 10px;
+  margin-top: 0.625rem;
   height: 50px;
   background-color: #fdff8a;
   border: 2px dashed #00000040;
@@ -544,16 +544,16 @@ label p {
 
 .contact-form textarea {
   height: 200px;
-  margin: 10px;
+  margin: 0.625rem;
   background-color: #fdff8a;
   border: 2px dashed #00000040;
 }
 .contact button {
   width: 200px;
   height: 60px;
-  margin: 20px 0px;
+  margin: 1.25rem 0;
   align-self: center;
-  padding: 10px 20px;
+  padding: 0.625rem 1.25rem;
   border: none;
   border-radius: 5px;
   box-shadow: 4px 8px 4px #00000040;
